--- a/index.html
+++ b/index.html
@@ -10,9 +10,23 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.pink-purple.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+    <link rel="apple-touch-icon"
+     sizes="180x180"
+      href="/apple-touch-icon.png"
+      />
+
+    <link rel="icon" 
+    type="image/png" 
+    sizes="32x32" 
+    href="/favicon-32x32.png"
+    />
+    <link rel="icon" 
+    type="image/png" 
+    sizes="16x16" 
+    href="/favicon-16x16.png"
+    />
+
     <link rel="manifest" href="/site.webmanifest">
     <link rel="manifest" href="./site.webmanifest" />
     <title> Positive or Negative # Generator, in JS</title>
@@ -35,30 +49,28 @@
       <br/>
   <div class="page-content">Select Your Number...</div>
       <form>
-  <div class="page-options">
-      <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-positive">
-  <input type="radio" id="option-positive" class="mdl-radio__button" name="kind-of-number" value="1" checked>
-  <span class="mdl-radio__label">Positive</span>
-  </label>
-  <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-negative">
-  <input type="radio" id="option-negative" class="mdl-radio__button" name="kind-of-number" value="2" />
-  <span class="mdl-radio__label">Negative</span>
-   </label>
-    </div>
-   </br>
-<!-- Accent-colored raised button with ripple -->
-  <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-    onclick="generateNumber()">
-    Generate!
-  </button>
-</form>
-<br/>
-  <div class="page-content-answer">
-    <div id="result"></div>
-  </div>
-  </main>
-  </div>
-</body>
-
-</html>
-
+        <div class="page-content">
+          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-positive">
+            <input type="radio" id="option-positive" class="mdl-radio__button" name="kind-of-number" value="1" checked />
+            <span class="mdl-radio__label">Positive</span>
+          </label>
+          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-negative">
+            <input type="radio" id="option-negative" class="mdl-radio__button" name="kind-of-number" value="2" />
+            <span class="mdl-radio__label">Negative</span>
+          </label>
+        </div>
+        <br />
+        <!-- Accent-colored raised button with ripple -->
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+          onclick="generateNumber ()" type="button">
+          Generate
+        </button>
+        </form>
+        <br />
+        <div class="page-content-answer">
+          <div id="result"></div>
+        </div>
+        </main>
+        </div>
+        </body>
+        </html>
